header spacing corrections

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -8,5 +8,6 @@ header {
 
   h1 {
     flex-grow: 1;
+    margin-bottom: 0;
   }
 }
